search field gets z-index over settings area (bug 818942)

--- a/media/css/mkt/desktop-header.less
+++ b/media/css/mkt/desktop-header.less
@@ -110,6 +110,7 @@
             position: absolute;
             top: 50%;
             right: 0;
+            z-index: 13;
             &:-moz-placeholder {
                 color: lighten(#48535d, 15%);
             }
